Added metadata decoding using taglib.js

--- a/examples/client/index.html
+++ b/examples/client/index.html
@@ -4,6 +4,7 @@
 <script src="jquery.js"></script>
 <script src="libshine.js"></script>
 <script src="libmad.js"></script>
+<script src="taglib.js"></script>
 <script src="libsamplerate.js"></script>
 <script src="webcast.js"></script>
 <script src="client.js"></script>
@@ -31,6 +32,7 @@ Choose a file to play:<br>
 <div id="player">
   <input type="file" id="file" accept="audio/*"><br>
   <button id="play-audio">Play</button><br>
+  <button id="metadata">Read Metadata</button><br>
 </div>
 <br>
 Stop Streaming:<br>
