Added close API.

--- a/examples/client/index.html
+++ b/examples/client/index.html
@@ -22,6 +22,7 @@ Samplerate: <select id="samplerate"></select><br>
   Bitrate:  <select id="bitrate"></select><br>
 <br>
 Play stream locally: <input type="checkbox" id="passThrough"><br>
+Repeat file: <input type="checkbox" id="loop"><br>
 Use asynchronous worker: <input type="checkbox" id="asynchronous"><br>
 Decode using libmad.js: <input type="checkbox" id="mad"><br>
 <br>
